# -TcpClientServerApp

./: README.md
TestTask/: CMakeLists.txt  ClientTask.h  Logger.cpp  Logger.h
TestTask/TestTaskTcpClient/: CMakeLists.txt  main.cpp
TestTask/TestTaskTcpServer/: CMakeLists.txt  main.cpp
